--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,7 +7,7 @@
 
 @font-face {
   font-family: 'cherolina';
-  src: url(/src/fonts/Cherolina.otf);
+  src: url(/src/fonts/Cherolina.ttf);
 }
 
 .nome-casal {
